# tweets-generater-server-and-web

./: .gitignore  README.md
poetry-demo/: pyproject.toml
poetry-demo/poetry_demo/: makefile  markov_chain.c  markov_chain.h  server_of_tweets.py  snakes_and_ladders.c  tweets_generator.c  web.html
